# cmu_zoe2

./: .gitmodules  INSTALL.md  README.md
cmu_zoe2/: CMakeLists.txt
cmu_zoe2/zoe2_bringup/: package.xml
cmu_zoe2/zoe2_bringup/launch/: test_forward_position_controller.launch.xml  test_joint_trajectory_controller.launch.xml  zoe2.launch.py  zoe2.launch.xml
cmu_zoe2/zoe2_description/rviz/: zoe2.rviz
cmu_zoe2/zoe2_description/test/: zoe2_test_urdf_xacro.py
cmu_zoe2/zoe2_description/urdf/: zoe2.urdf.xacro
hyperion_controller/: CMakeLists.txt  hyperion_controller_plugin.xml  package.xml
hyperion_controller/include/hyperion_controller/: articulated_axle_controller.hpp  hyperion_controller.hpp  visibility_control.h
hyperion_controller/src/: controller.cpp  hyperion_controller.cpp  hyperion_controller_parameter.yaml
hyperion_controller/test/: test_hyperion_controller.cpp  test_load_hyperion_controller.cpp
hyperion_controller/test/config/: test_hyperion_controller.yaml
src/cmu_zoe2/cmu_zoe2/: package.xml
src/cmu_zoe2/zoe2_description/: CMakeLists.txt  README.md  package.xml
velocity_command_player/: package.xml  readme.md  setup.cfg  setup.py
velocity_command_player/config/: commands.csv  controls.csv  simple_path_controls.csv
velocity_command_player/velocity_command_player/: csv_velocity_player.py
zoe2_bringup/: CMakeLists.txt  README.md  package.xml
zoe2_bringup/config/: gz_bridge.yaml  hyperion_sim_controllers.yaml  zoe2_controllers.yaml  zoe2_diff_drive_controller.yaml  zoe2_diff_drive_controllers.yaml  zoe2_hw_controllers.yaml  zoe2_sim_controllers.yaml
zoe2_bringup/launch/: diff_drive_hw.launch.py  hw.launch.py  hyperion_sim.launch.py  launch_sim.launch.py  rsp.launch.py  rviz.launch.py  sandbox.launch.py  sim.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py  vicon.launch.py  zoe2.launch.py
zoe2_bringup/launch/common/: foxglove.launch.py  rsp.launch.py  rviz.launch.py  sensors.launch.py
zoe2_bringup/launch/not_working/: zoe2.launch.py  zoe2.launch.xml  zoe2_2.launch.py
zoe2_bringup/rviz/: hw.rviz  sim.rviz  wheel_speeds.rviz  zoe2.rviz
zoe2_bringup/worlds/models/apollo15_landing_site_1000x1000/: model-1_4.sdf
zoe2_controller/: CMakeLists.txt  package.xml  zoe2_controller_plugin.xml
zoe2_controller/include/zoe2_controller/: controller.hpp  visibility_control.h  zoe2_controller.hpp
zoe2_controller/src/: controller.cpp  zoe2_controller.cpp  zoe2_controller_parameter.yaml
zoe2_controller/test/: test_load_zoe2_controller.cpp  test_zoe2_controller.cpp
zoe2_controller/test/config/: test_diff_drive_controller.yaml
zoe2_controllers/: CMakeLists.txt  package.xml
zoe2_controllers/include/zoe2_controllers/: passive_steering_drive_controller.hpp  visibility_control.h
zoe2_controllers/src/: passive_steering_drive_controller.cpp
zoe2_description/: README.md  package.xml
zoe2_description/launch/: view_zoe2.launch.py
zoe2_description/rviz/: zoe2.rviz
zoe2_description/urdf/: zoe1.urdf.xacro  zoe2.urdf.xacro
zoe2_description/urdf/common/: axle.xacro  chassis.xacro  hinge.xacro  params.xacro  wheel.xacro
zoe2_description/urdf/zoe1/: zoe1_macro.ros2_control.xacro  (+2 more)
zoe2_hardware/: CMakeLists.txt  package.xml  zoe2_hardware.xml
zoe2_hardware/config/: mapCurrentPDO4.sh  mapCurrentTorquePDO4.sh  mapMotors.sh  mapPosPDO3.sh  mapPosVelPDO3.sh  mapVelPDO4.sh
zoe2_hardware/include/zoe2_hardware/: can.hpp  can_hw.hpp  commander.hpp  dispatcher.hpp  rs232.hpp
zoe2_hardware/src/: can.cpp  can_hw.cpp  commander.cpp  dispatcher.cpp  read_object.sh  rs232.cpp
zoe2_interfaces/: CMakeLists.txt  README.md  package.xml
zoe2_interfaces/driving/msg/: DriveArc.msg  DrivePlan.msg
zoe2_interfaces/driving/srv/: DriveCommand.srv  GenerateDrivePlan.srv
zoe2_interfaces/msg/: DriveCmd.msg  DriveCmdStamped.msg
zoe2_joystick/: Notes.md  package.xml  setup.cfg  setup.py
zoe2_joystick/launch/: joystick.launch.py  joystick_launch.py
zoe2_joystick/zoe2_joystick/: twist_modifier.py
zoe2_odom/: CMakeLists.txt  package.xml
zoe2_odom/launch/: odom_tf_broadcaster.launch.py
zoe2_odom/sim_tf/: CMakeLists.txt  package.xml
zoe2_odom/sim_tf/launch/: odom_tf_broadcaster.launch.py
zoe2_odom/src/: odom_tf_broadcaster.cpp
zoe2_optimal_controller/: CMakeLists.txt  package.xml
zoe2_optimal_controller/src/: optimal_controller.cpp
zoe2_optimal_controller_py/: package.xml  setup.cfg  setup.py
zoe2_optimal_controller_py/zoe2_optimal_controller_py/: optimal_controller.py
zoe2_planner/: CMakeLists.txt  astar_planner.py  astar_planner_3.py  astar_planner_4.py  cpp_path_visualizer.py  package.xml  rrt_planner.py  zoe2-astar-planner.cpp  zoe2_astar_planner.cpp  zoe2_astar_tester.cpp  zoe2_rrt_planner.cpp
zoe2_planner/include/: zoe2_astar_planner.h
zoe2_planner/include/zoe2_planner/: zoe2_astar_planner.h
zoe2_planner/launch/: planner_launch.py
zoe2_planner/src/: a_star_planner_node.cpp  astar_planner.cpp  astar_server.cpp  zoe2_astar_planner.cpp
zoe2_utils/: end_can.sh  logparse.py  start_can.sh  start_vcan.sh
zoe2_utils/cmd_vel_publisher/: package.xml  setup.py
zoe2_visualizers/: CMakeLists.txt  package.xml
zoe2_visualizers/launch/: drive_arc_visualizer.launch.py
zoe2_visualizers/src/: drive_arc_visualizer.cpp
zoe_controller/: CMakeLists.txt  package.xml  zoe_controller_plugin.xml
zoe_controller/include/zoe_controller/: controller.hpp  visibility_control.h  zoe_controller.hpp
zoe_controller/src/: controller.cpp  zoe_controller.cpp  zoe_controller_parameter.yaml
zoe_controller/test/: test_load_zoe_controller.cpp  test_zoe_controller.cpp
zoe_controller/test/config/: test_diff_drive_controller.yaml
zoe_motor_hardware/: CMakeLists.txt  package.xml  readme.md  zoe_motor_hardware_plugin.xml
zoe_motor_hardware/include/zoe_motor_hardware/: can.hpp  commander.hpp  rs232.hpp  visibility_control.h  zoe_motor_hardware.hpp
zoe_motor_hardware/src/: can.cpp  commander.cpp  hw_test.cpp  rs232.cpp  zoe_motor_hardware.cpp
zoe_motor_hardware/test/: test_load_zoe_motor_hardware.cpp
(+22 files in other folders)
