<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zoe2_bringup</name>
  <version>0.0.0</version>
  <description>Launch and config files for starting the robot using ros2_control</description>
  <maintainer email="eholand@andrew.cmu.edu">eholandcmu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>zoe2_description</exec_depend>

  <exec_depend>controller_manager</exec_depend>

  <exec_depend>diff_drive_controller</exec_depend>

  <exec_depend>joint_state_broadcaster</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>ros2_controllers_test_nodes</exec_depend>

  <exec_depend>rviz2</exec_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
