<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zoe2_controllers</name>
  <version>0.0.0</version>
  <description>Custom controllers for Zoe2 Rover</description>
  <maintainer email="eholand@andrew.cmu.edu">eholandcmu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
