<?xml version="1.0"?>
<package format="3">
  <name>zoe2_planner</name>
  <version>0.1.0</version>
  <description>A ROS 2 package for the A* planner node</description>
  
  <maintainer email="sjudson@andrew.cmu.edu">Your Name</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>zoe2_interfaces</build_depend>
  <build_depend>tf2</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>zoe2_interfaces</exec_depend>
  <exec_depend>tf2</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
